--- a/template/template.csproj
+++ b/template/template.csproj
@@ -88,6 +88,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="multithreading\cpuaffinity.cs" />
     <Compile Include="multithreading\threadpool.cs" />
     <Compile Include="raytracer\bvh.cs" />
