--- a/template/packages.config
+++ b/template/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="System.Numerics.Vectors" version="4.1.1-beta-23516" targetFramework="net45" />
+  <package id="OpenTK" version="3.0.1" targetFramework="net45" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net45" />
 </packages>
