Restructered & Renamed: Namespaces, Project files | Added: ISceneObject

--- a/WhittedStyleRaytracer/WhittedStyleRaytracer.csproj
+++ b/WhittedStyleRaytracer/WhittedStyleRaytracer.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{9354EB6E-D674-4763-A589-3631FABE7654}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>raytracer</RootNamespace>
-    <AssemblyName>raytracer</AssemblyName>
+    <RootNamespace>WhittedStyleRaytracer</RootNamespace>
+    <AssemblyName>WhittedStyleRaytracer</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -73,7 +73,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Raytracer.OpenTKApp</StartupObject>
+    <StartupObject>WhittedStyleRaytracer.OpenTKProgram</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="OpenTK, Version=3.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
@@ -94,23 +94,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="Multithreading\GlobalSuppressions.cs" />
     <Compile Include="Multithreading\CPUaffinity.cs" />
     <Compile Include="Multithreading\Threadpool.cs" />
-    <Compile Include="Raytracer\BVH.cs" />
-    <Compile Include="Raytracer\Objects\Triangle.cs" />
-    <Compile Include="Raytracer\Ray.cs" />
-    <Compile Include="Raytracer\Intersection.cs" />
-    <Compile Include="Raytracer\Camera.cs" />
+    <Compile Include="Raytracing\BVH.cs" />
+    <Compile Include="Raytracing\ISceneObject.cs" />
+    <Compile Include="Raytracing\SceneObjects\Primitives\Triangle.cs" />
+    <Compile Include="Raytracing\Ray.cs" />
+    <Compile Include="Raytracing\Intersection.cs" />
+    <Compile Include="Raytracing\SceneObjects\Camera.cs" />
     <Compile Include="Main.cs" />
-    <Compile Include="Raytracer\Objects\Lightsource.cs" />
-    <Compile Include="Raytracer\Objects\Plane.cs" />
-    <Compile Include="Raytracer\Objects\Primitive.cs" />
-    <Compile Include="Raytracer\Objects\Sphere.cs" />
-    <Compile Include="Raytracer\Scene.cs" />
-    <Compile Include="Raytracer\ScreenPlane.cs" />
+    <Compile Include="Raytracing\SceneObjects\Lightsource.cs" />
+    <Compile Include="Raytracing\SceneObjects\Primitives\Plane.cs" />
+    <Compile Include="Raytracing\SceneObjects\Primitive.cs" />
+    <Compile Include="Raytracing\SceneObjects\Primitives\Sphere.cs" />
+    <Compile Include="Raytracing\Scene.cs" />
+    <Compile Include="Raytracing\SceneObjects\ScreenPlane.cs" />
     <Compile Include="Surface.cs" />
-    <Compile Include="OpenTKApp.cs" />
+    <Compile Include="OpenTKProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
