--- a/WhittedStyleRaytracer/WhittedStyleRaytracer.csproj
+++ b/WhittedStyleRaytracer/WhittedStyleRaytracer.csproj
@@ -98,7 +98,9 @@
     <Compile Include="Multithreading\CPUaffinity.cs" />
     <Compile Include="Multithreading\Threadpool.cs" />
     <Compile Include="Raytracing\BVH.cs" />
+    <Compile Include="Raytracing\IAccelerationStructure.cs" />
     <Compile Include="Raytracing\ISceneObject.cs" />
+    <Compile Include="Raytracing\SceneObjects\IScreen.cs" />
     <Compile Include="Raytracing\SceneObjects\Primitives\Triangle.cs" />
     <Compile Include="Raytracing\Ray.cs" />
     <Compile Include="Raytracing\Intersection.cs" />
@@ -131,7 +133,9 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Raytracing\AccelerationStructures\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
