--- a/WhittedRaytracer/WhittedRaytracer.csproj
+++ b/WhittedRaytracer/WhittedRaytracer.csproj
@@ -93,7 +93,7 @@
   <ItemGroup>
     <Compile Include="Drawing\Sprite.cs" />
     <Compile Include="ExtensionMethods.cs" />
-    <Compile Include="Multithreading\GlobalSuppressions.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Multithreading\CPUaffinity.cs" />
     <Compile Include="Multithreading\Threadpool.cs" />
     <Compile Include="Raytracing\AccelerationStructures\BVH.cs" />
