--- a/WhittedRaytracer/WhittedRaytracer.csproj
+++ b/WhittedRaytracer/WhittedRaytracer.csproj
@@ -96,9 +96,9 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Multithreading\CPUaffinity.cs" />
     <Compile Include="Multithreading\Threadpool.cs" />
-    <Compile Include="Raytracing\AccelerationStructures\AABB.cs" />
-    <Compile Include="Raytracing\AccelerationStructures\BVH.cs" />
-    <Compile Include="Raytracing\AccelerationStructures\BVHNode.cs" />
+    <Compile Include="Raytracing\AccelerationStructure\AABB.cs" />
+    <Compile Include="Raytracing\AccelerationStructure\BVH.cs" />
+    <Compile Include="Raytracing\AccelerationStructure\BVHNode.cs" />
     <Compile Include="Raytracing\IAccelerationStructure.cs" />
     <Compile Include="Raytracing\ISceneObject.cs" />
     <Compile Include="Raytracing\SceneObjects\IScreen.cs" />
