--- a/WhittedRaytracer/WhittedRaytracer.csproj
+++ b/WhittedRaytracer/WhittedRaytracer.csproj
@@ -91,6 +91,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Raytracing\SceneObjects\CameraParts\Accumulator.cs" />
+    <Compile Include="Raytracing\SceneObjects\CameraParts\Cavity.cs" />
     <Compile Include="Drawing\Sprite.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="GlobalSuppressions.cs" />
@@ -101,7 +103,7 @@
     <Compile Include="Raytracing\AccelerationStructure\BVHNode.cs" />
     <Compile Include="Raytracing\IAccelerationStructure.cs" />
     <Compile Include="Raytracing\ISceneObject.cs" />
-    <Compile Include="Raytracing\SceneObjects\IScreen.cs" />
+    <Compile Include="Raytracing\SceneObjects\CameraParts\IScreen.cs" />
     <Compile Include="Raytracing\SceneObjects\Material.cs" />
     <Compile Include="Raytracing\SceneObjects\Primitives\Triangle.cs" />
     <Compile Include="Raytracing\Ray.cs" />
@@ -113,7 +115,7 @@
     <Compile Include="Raytracing\SceneObjects\Primitive.cs" />
     <Compile Include="Raytracing\SceneObjects\Primitives\Sphere.cs" />
     <Compile Include="Raytracing\Scene.cs" />
-    <Compile Include="Raytracing\SceneObjects\ScreenPlane.cs" />
+    <Compile Include="Raytracing\SceneObjects\CameraParts\ScreenPlane.cs" />
     <Compile Include="Drawing\Surface.cs" />
     <Compile Include="OpenTKProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
