--- a/WhittedRaytracer/WhittedRaytracer.csproj
+++ b/WhittedRaytracer/WhittedRaytracer.csproj
@@ -120,8 +120,8 @@
     <Compile Include="Drawing\Surface.cs" />
     <Compile Include="OpenTKProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stats.cs" />
-    <Compile Include="TimeLog.cs" />
+    <Compile Include="Statistics\Stats.cs" />
+    <Compile Include="Statistics\TimeLog.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
