--- a/UnitTestProject/UnitTests.csproj
+++ b/UnitTestProject/UnitTests.csproj
@@ -17,4 +17,10 @@
     <ProjectReference Include="..\WhittedRaytracer\WhittedRaytracer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
