--- a/WhittedRaytracer/WhittedRaytracer.csproj
+++ b/WhittedRaytracer/WhittedRaytracer.csproj
@@ -94,8 +94,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Raytracing\AccelerationStructure\IAABB.cs" />
-    <Compile Include="Raytracing\AccelerationStructure\Split.cs" />
+    <Compile Include="Raytracing\AccelerationStructure\BVH\IAABB.cs" />
+    <Compile Include="Raytracing\AccelerationStructure\BVH\Split.cs" />
     <Compile Include="Raytracing\CameraRay.cs" />
     <Compile Include="Raytracing\SceneObjects\CameraParts\Accumulator.cs" />
     <Compile Include="Raytracing\SceneObjects\CameraParts\Cavity.cs" />
@@ -104,9 +104,9 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Multithreading\CPUaffinity.cs" />
     <Compile Include="Multithreading\Threadpool.cs" />
-    <Compile Include="Raytracing\AccelerationStructure\AABB.cs" />
-    <Compile Include="Raytracing\AccelerationStructure\BVH.cs" />
-    <Compile Include="Raytracing\AccelerationStructure\BVHNode.cs" />
+    <Compile Include="Raytracing\AccelerationStructure\BVH\AABB.cs" />
+    <Compile Include="Raytracing\AccelerationStructure\BVH\BVHTree.cs" />
+    <Compile Include="Raytracing\AccelerationStructure\BVH\BVHNode.cs" />
     <Compile Include="Raytracing\IAccelerationStructure.cs" />
     <Compile Include="Raytracing\ISceneObject.cs" />
     <Compile Include="Raytracing\SceneObjects\CameraParts\IScreen.cs" />
@@ -148,7 +148,9 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Raytracing\AccelerationStructure\SBVH\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
