--- a/PathTracer/PathTracer.csproj
+++ b/PathTracer/PathTracer.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <StartupObject>PathTracer.Program</StartupObject>
+	<Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
