Fixed: comments; csproj

--- a/PathTracer/PathTracer.csproj
+++ b/PathTracer/PathTracer.csproj
@@ -8,8 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Pathtracing\Points\**" />
     <Compile Remove="Pathtracing\ScatteringPoints\**" />
+    <EmbeddedResource Remove="Pathtracing\Points\**" />
     <EmbeddedResource Remove="Pathtracing\ScatteringPoints\**" />
+    <None Remove="Pathtracing\Points\**" />
     <None Remove="Pathtracing\ScatteringPoints\**" />
   </ItemGroup>
 
@@ -27,10 +30,6 @@
     <None Update="Drawing\shader.vert">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Pathtracing\Points\" />
   </ItemGroup>
 
 </Project>
