Changed: Material inheritance from classes to interfaces;

--- a/PathTracer/PathTracer.csproj
+++ b/PathTracer/PathTracer.csproj
@@ -32,4 +32,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pathtracing\SceneDescription\Materials\VolumetricMaterials\" />
+  </ItemGroup>
+
 </Project>
