--- a/PathTracer/PathTracer.csproj
+++ b/PathTracer/PathTracer.csproj
@@ -23,4 +23,10 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pathtracing\SceneDescription\Materials\Profiles\Absorption\" />
+    <Folder Include="Pathtracing\SceneDescription\Materials\Profiles\Emittance\" />
+    <Folder Include="Pathtracing\SceneDescription\Materials\Profiles\Scattering\" />
+  </ItemGroup>
+
 </Project>
