--- a/PathTracer/PathTracer.csproj
+++ b/PathTracer/PathTracer.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="MathNet.Numerics" Version="4.15.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="OpenTK" Version="4.6.7" />
+    <PackageReference Include="SimpleImageIO" Version="0.11.0" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
